--- a/src/DisqordSharedRateLimit/DisqordSharedRateLimit.csproj
+++ b/src/DisqordSharedRateLimit/DisqordSharedRateLimit.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="StackExchange.Redis" Version="2.2.62" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Gateway" />
+    </ItemGroup>
+
 </Project>
