--- a/src/DisqordSharedRateLimit/DisqordSharedRateLimit.csproj
+++ b/src/DisqordSharedRateLimit/DisqordSharedRateLimit.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>DisqordSharedRatelimit</RootNamespace>
+        <RootNamespace>DisqordSharedRateLimit</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
