--- a/src/DisqordSharedRateLimit/DisqordSharedRateLimit.csproj
+++ b/src/DisqordSharedRateLimit/DisqordSharedRateLimit.csproj
@@ -6,12 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Disqord.Gateway.Api" Version="1.0.0-07082021-49" />
       <PackageReference Include="Disqord.Rest.Api" Version="1.0.0-07082021-49" />
       <PackageReference Include="StackExchange.Redis" Version="2.2.62" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Gateway" />
     </ItemGroup>
 
 </Project>
