attempt 1 at fixing ci

--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -10,7 +10,7 @@ jobs:
 
     env:
       BUILD_CONFIG: 'Release'
-      SOLUTION: 'src/DisqordSharedRateLimit.sln'
+      SOLUTION: '.\src\DisqordSharedRateLimit.sln'
 
     runs-on: ubuntu-latest
 
