--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -24,12 +24,12 @@ jobs:
         $version = GetBuildVersion -VersionString $Env:GITHUB_REF
         echo "BUILD_VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
       shell: pwsh
-
-    - name: Get Directory Contents
-      run: ls -la | cd src | ls -la
     
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
+
+    - name: Setup NuGet Sources
+        run: nuget sources add -Name "Disqord" -Source "https://www.myget.org/F/disqord/api/v3/index.json"
 
     - name: Restore dependencies
       run: nuget restore $SOLUTION
