attempt 6 at fixing ci

--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -30,6 +30,7 @@ jobs:
 
     - name: Setup NuGet Sources
         run: nuget sources add -Name "Disqord" -Source "https://www.myget.org/F/disqord/api/v3/index.json"
+        shell: cmd
 
     - name: Restore dependencies
       run: nuget restore $SOLUTION
