attempt 9 at fixing ci

--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -4,6 +4,12 @@ on:
   create:
     branches: 
       - release/**
+  push:
+    branches:
+    - main
+  pull_request:
+    branches:
+    - main
     
 jobs:
   build:
@@ -11,6 +17,7 @@ jobs:
     env:
       BUILD_CONFIG: 'Release'
       SOLUTION: './src/DisqordSharedRateLimit.sln'
+      PROJECT: './src/DisqordSharedRateLimit/DisqordSharedRateLimit.csproj'
 
     runs-on: ubuntu-latest
 
@@ -37,7 +44,7 @@ jobs:
         dotnet-version: 5.0.x
 
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
+      run: dotnet build $PROJECT --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
       
     - name: Publish
       if: startsWith(github.ref, 'refs/heads/release')
